--- a/dspic33a_crc_basic.X/mcc-manifest-autosave.yml
+++ b/dspic33a_crc_basic.X/mcc-manifest-autosave.yml
@@ -2,7 +2,7 @@
 
 manifest_file_version: 1.0.0
 project: dspic33a_crc_basic
-creation_date: 2024-09-16T11:31:34.337-07:00[America/Phoenix]
+creation_date: 2024-09-23T09:51:47.161-07:00[America/Phoenix]
 operating_system: Windows 10
 mcc_mode: IDE
 mcc_mode_version: v6.20
@@ -10,7 +10,7 @@ device_name: dsPIC33AK128MC106
 compiler: XCDSC 3.10
 mcc_version: 5.5.1
 mcc_core_version: 5.7.1
-content_manager_version: 5.0.1-e
+content_manager_version: 5.0.0
 is_mcc_offline: false
 is_using_prerelease_versions: false
 mcc_content_registries: https://registry.npmjs.org/
