--- a/dspic33a_crc_basic.X/mcc-manifest-autosave.yml
+++ b/dspic33a_crc_basic.X/mcc-manifest-autosave.yml
@@ -2,35 +2,35 @@
 
 manifest_file_version: 1.0.0
 project: dspic33a_crc_basic
-creation_date: 2024-09-24T13:21:57.052-07:00[America/Phoenix]
-operating_system: Windows 10
+creation_date: 2025-06-16T13:18:41.646-07:00[America/Phoenix]
+operating_system: Windows 11
 mcc_mode: IDE
-mcc_mode_version: v6.20
+mcc_mode_version: v6.25
 device_name: dsPIC33AK128MC106
-compiler: XCDSC 3.10
-mcc_version: 5.5.1
+compiler: XCDSC 3.21
+mcc_version: 5.5.2
 mcc_core_version: 5.7.1
 content_manager_version: 5.0.0
 is_mcc_offline: false
 is_using_prerelease_versions: false
-mcc_content_registries: https://registry.npmjs.org/
+mcc_content_registries: https://registry.npmjs.org/,https://artifacts.microchip.com/artifactory/api/npm/npm/
 device_library: {library_class: com.microchip.mcc.melody.Library, name: Melody, version: 2.7.1}
-packs: {name: dsPIC33AK-MC_DFP, version: 1.0.33}
+packs: {name: dsPIC33AK-MC_DFP, version: 1.2.125}
 modules:
 - {name: '@mchp-mcc/crc-16bit-driver', type: MELODY, version: 1.0.4}
 - {name: '@mchp-mcc/dmt-16bit-driver', type: MELODY, version: 1.0.7}
-- {name: '@mchp-mcc/dspic33a-clock', type: MELODY, version: 1.1.0}
-- {name: '@mchp-mcc/dspic33a-configuration-bits', type: MELODY, version: 1.0.1}
+- {name: '@mchp-mcc/dspic33a-clock', type: MELODY, version: 1.1.2}
+- {name: '@mchp-mcc/dspic33a-configuration-bits', type: MELODY, version: 1.1.0}
 - {name: '@mchp-mcc/dspic33a-crc', type: MELODY, version: 1.0.1}
 - {name: '@mchp-mcc/dspic33a-dmt', type: MELODY, version: 1.0.1}
-- {name: '@mchp-mcc/dspic33a-interrupt', type: MELODY, version: 1.0.1}
+- {name: '@mchp-mcc/dspic33a-interrupt', type: MELODY, version: 1.1.0}
 - {name: '@mchp-mcc/dspic33a-pac', type: MELODY, version: 1.0.1}
 - {name: '@mchp-mcc/dspic33a-pin-manager', type: MELODY, version: 1.0.1}
 - {name: '@mchp-mcc/dspic33a-reset', type: MELODY, version: 1.0.1}
-- {name: '@mchp-mcc/dspic33a-uart', type: MELODY, version: 1.0.1}
+- {name: '@mchp-mcc/dspic33a-uart', type: MELODY, version: 1.0.2}
 - {name: '@mchp-mcc/dspic33a-wdt', type: MELODY, version: 1.0.1}
 - {name: '@mchp-mcc/main-16bit-manager', type: MELODY, version: 1.1.3}
-- {name: '@mchp-mcc/pic-16bit', type: MELODY, version: 5.12.3}
-- {name: '@mchp-mcc/pin-content-processor', type: MELODY, version: 3.8.0}
+- {name: '@mchp-mcc/pic-16bit', type: MELODY, version: 5.13.1}
+- {name: '@mchp-mcc/pin-content-processor', type: MELODY, version: 3.10.0}
 - {name: '@mchp-mcc/uart-driver', type: MELODY, version: 1.10.2}
 - {name: '@mchp-mcc/wdt-16bit-driver', type: MELODY, version: 1.0.9}
